# palisade-scanner

./: .env.example  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  README.md  SECURITY.md  docker-compose.yml  opencode.jsonc  pyproject.toml  requirements.txt
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  publish.yml  release.yml
frontend/static/: style.css
frontend/templates/: index.html
hf-spaces/: README.md
src/scanner/: __init__.py  api.py  cli.py  config.py  middleware.py  taxonomy.py
src/scanner/certification/: __init__.py  pipeline.py
src/scanner/detectors/: __init__.py  base.py  entropy.py  exfiltration.py  hidden_text.py  image_stego.py  injection_patterns.py  instruction_classifier.py  metadata_analyzer.py  pdf_analyzer.py  pdf_content_extractor.py  registry.py  stego_markers.py  unicode_adv.py
src/scanner/domain/: models.py  scoring.py
src/scanner/loaders/: base.py  image.py  pdf.py  url.py
src/scanner/monitor/: __init__.py  alerter.py  diff.py  scheduler.py  store.py
src/scanner/pipeline/: __init__.py  orchestrator.py
src/scanner/policies/: __init__.py  generator.py
src/scanner/proxy/: __init__.py  core.py  rewrite.py  server.py  strip.py
src/scanner/redteam/: __init__.py  evaluator.py  generator.py
src/scanner/reporters/: __init__.py
src/scanner/reputation/: __init__.py  engine.py  scorer.py
src/scanner/utils/: __init__.py  dom_utils.py  pdf.py
src/scanner/validator/: __init__.py  evaluator.py  runner.py
tests/: conftest.py  test_certification.py  test_cli.py  test_monitor.py  test_pipeline.py  test_policies.py  test_proxy.py  test_redteam.py  test_reporters.py  test_reputation.py  test_scoring.py  test_validator.py
tests/fixtures/: clean_legit_page.html  encoded_content.html  exfiltration_hidden.html  hidden_display_none.html  instruction_in_comment.html  stego_markers.html  unicode_bidi.html  zalgo_text.html  zero_width_chars.html
tests/test_detectors/: test_entropy.py  test_exfiltration.py  test_hidden_text.py  test_image_stego.py  test_injection_patterns.py  test_metadata_analyzer.py  test_nova_patterns.py  test_pdf_analyzer.py  test_pdf_content_extractor.py  test_stego_markers.py  test_unicode_adv.py
